--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ges-rv",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "tsc",
