--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+package-lock.json
+
+# Build output
+dist/
+build/
+
+# Environment variables
 .env
+
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Testing
+coverage/
+*.lcov
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+tmp/
+temp/
